--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@
 genome: "ref/Bos_taurus.UMD3.1.dna.toplevel.fa"
 index: "ref/Bos_taurus.UMD3.1.dna.toplevel"
 gtf: "ref/Bos_taurus.UMD3.1.90.gtf"
-adaptors: "scripts/contams_forward_rev.fa"
+adaptors: "contams_forward_rev.fa"
 
 # read pair pattern
 pat_r1: "{sample}_R1_001.fastq.gz"
