--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 # resources
-genome: "ref/Bos_taurus.UMD3.1.dna.toplevel.fa"
-index: "ref/Bos_taurus.UMD3.1.dna.toplevel"
-gtf: "ref/Bos_taurus.UMD3.1.90.gtf"
+genome: "ref/Danio_rerio.GRCz10.dna.toplevel.fa"
+index: "ref/Danio_rerio.GRCz10.dna.toplevel"
+gtf: "ref/Danio_rerio.GRCz10.91.gtf"
 adaptors: "contams_forward_rev.fa"
 threads: 4
 
